# dead-as-disco-analyser

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
assets/: README.md
installer/: RhythmAnalyzer.iss
scripts/: build-installer.ps1  build-windows.ps1  run.ps1
src/rhythm_analyzer/: __init__.py  __main__.py  app.py
